--- a/app/src/main/res/layout/fragment_bitmap.xml
+++ b/app/src/main/res/layout/fragment_bitmap.xml
@@ -4,31 +4,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imageBitmap"
+    <Button
+        android:id="@+id/load"
+        android:text="load"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@mipmap/ic_launcher_round" />
 
     <ImageView
-        android:id="@+id/imageBitmapScheme"
+        android:id="@+id/avatarView"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
+
+    <ImageView
+        android:id="@+id/avatarCacheView"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
+
+    <Button
+        android:id="@+id/bitmapPoolSize"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center_vertical"
-        android:src="@mipmap/ic_launcher_round" />
+        android:text="pool size"/>
 
-    <ImageView
-        android:id="@+id/imageBitmapSchemeMatch"
+    <Button
+        android:id="@+id/clear"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_gravity="center_vertical|right"
-        android:src="@mipmap/ic_launcher_round" />
+        android:text="clear"
+        android:layout_gravity="center_vertical|right" />
 
-    <ImageView
-        android:id="@+id/imageBitmapR"
+    <Button
+        android:id="@+id/imageBitmapCache"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="end"
-        android:src="@mipmap/ic_launcher" />
+        android:text="使用缓存"/>
 
 </FrameLayout>
