--- a/app/src/main/res/layout/fragment_auto_text.xml
+++ b/app/src/main/res/layout/fragment_auto_text.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/autoText"
-        android:text="Single-line text view that scrolls automatically if the text is too long to fit in the widget"
-        android:singleLine="true"
-        android:ellipsize="marquee"
-        android:marqueeRepeatLimit ="marquee_forever"
-        android:focusable="true"
-        android:layout_gravity="center"
-        android:focusableInTouchMode="true"
-        android:scrollHorizontally="true"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:ellipsize="marquee"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:scrollHorizontally="true"
+        android:singleLine="true"
+        android:text="Single-line text view that scrolls automatically if the text is too long to fit in the widget" />
+
+    <TextView
+        android:id="@+id/autoText2"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center_horizontal"
+        android:focusable="true"
+        android:scrollbars="vertical"
+        android:text="Single-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widgetSingle-line text view that scrolls automatically if the text is too long to fit in the widget" />
 
 </FrameLayout>
