--- a/app/src/main/res/layout/fragment_string.xml
+++ b/app/src/main/res/layout/fragment_string.xml
@@ -6,16 +6,16 @@
 
 
     <Button
-        android:id="@+id/image_to_video"
+        android:id="@+id/start_with"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="image_to_Video" />
+        android:text="start_with" />
 
     <Button
-        android:id="@+id/video_watermark"
+        android:id="@+id/start_with2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="video_watermark" />
+        android:text="start_with2" />
 
     <Button
         android:id="@+id/media_info"
