--- a/app/src/main/res/layout/fragment_ffmpag.xml
+++ b/app/src/main/res/layout/fragment_ffmpag.xml
@@ -10,6 +10,18 @@
 
 
         <Button
+            android:id="@+id/maintain_original_quality"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Maintain_original_quality" />
+
+        <Button
+            android:id="@+id/addWatermark_music"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="add_watermark_music" />
+
+        <Button
             android:id="@+id/image_to_video"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
