--- a/app/src/main/res/layout/fragment_string.xml
+++ b/app/src/main/res/layout/fragment_string.xml
@@ -18,51 +18,19 @@
         android:text="start_with2" />
 
     <Button
-        android:id="@+id/media_info"
+        android:id="@+id/formatText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="media_info" />
+        android:text="formatText" />
 
-    <Button
-        android:id="@+id/add_cover_video"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="add_cover_video" />
 
-    <Button
-        android:id="@+id/add"
+    <TextView
+        android:id="@+id/atText"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:layout_margin="30dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="add" />
-
-    <Button
-        android:id="@+id/to_gif"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="to_gif" />
-
-    <Button
-        android:id="@+id/array_command"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="array_command" />
-
-    <Button
-        android:id="@+id/merge_video"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="merge_video" />
-    <Button
-        android:id="@+id/merge_video1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="merge_video1" />
-    <Button
-        android:id="@+id/video_convert_images"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="video_convert_images" />
-
+        android:layout_height="wrap_content"/>
 
 
 </LinearLayout>
