添加字幕成功
Signed-off-by: liuyuzhe <15313482685@163.com>

--- a/app/src/main/res/layout/fragment_ffmpag.xml
+++ b/app/src/main/res/layout/fragment_ffmpag.xml
@@ -10,6 +10,12 @@
 
 
         <Button
+            android:id="@+id/add_subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="add_subtitle" />
+
+        <Button
             android:id="@+id/show_streams"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -45,6 +51,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="image_to_Video" />
+        <Button
+            android:id="@+id/images_to_video"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="images_to_Video" />
 
         <Button
             android:id="@+id/video_watermark"
