--- a/app/src/main/res/layout/fragment_ffmpag.xml
+++ b/app/src/main/res/layout/fragment_ffmpag.xml
@@ -10,6 +10,11 @@
 
 
         <Button
+            android:id="@+id/drawText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="drawText" />
+        <Button
             android:id="@+id/add_subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
