--- a/app/src/main/res/layout/fragment_expand.xml
+++ b/app/src/main/res/layout/fragment_expand.xml
@@ -16,9 +16,10 @@
 
         <!--This is a ConstraintLayout for the entire CardView
                 including the expandable portion-->
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.qwuiteam.project.view.RoundConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/fixed_layout"
@@ -65,13 +66,12 @@
                 app:layout_constraintVertical_bias="0.0" />
 
 
-
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@id/fixed_layout"
+                android:src="@drawable/icon_vs"
                 app:layout_constraintEnd_toEndOf="@id/fixed_layout"
-                android:src="@drawable/icon_vs"/>
+                app:layout_constraintStart_toStartOf="@id/fixed_layout" />
 
 
             <!--The following is the expandable portion whose
@@ -167,7 +167,7 @@
             </LinearLayout>
 
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.qwuiteam.project.view.RoundConstraintLayout>
     </FrameLayout>
 
 </FrameLayout>
