--- a/app/src/main/res/layout/fragment_svga.xml
+++ b/app/src/main/res/layout/fragment_svga.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Button
         android:id="@+id/load1"
         android:text="load1"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@mipmap/ic_launcher_round" />
+
+    <Button
+        android:id="@+id/loadFull"
+        android:text="loadFull"
+        android:layout_gravity="center_horizontal"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@mipmap/ic_launcher_round" />
@@ -38,5 +46,11 @@
         android:id="@+id/svgaView"
         android:layout_width="match_parent"
         android:layout_height="200dp"/>
+
+    <com.opensource.svgaplayer.SVGAImageView
+        android:id="@+id/svgaViewFull"
+        app:loopCount="1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
