--- a/app/src/main/res/drawable/shape_red_packet_type_bg.xml
+++ b/app/src/main/res/drawable/shape_red_packet_type_bg.xml
@@ -4,9 +4,9 @@
 
     <corners android:radius="4dp" />
 
-    <solid android:color="@color/transparent" />
+    <solid android:color="#E618003A" />
 
     <stroke android:width="1dp"
-        android:color="#FAC792"/>
+        android:color="#FAC792" />
 
 </shape>
