--- a/app/src/main/res/layout/fragment_pk.xml
+++ b/app/src/main/res/layout/fragment_pk.xml
@@ -16,7 +16,6 @@
             android:layout_margin="30dp" />
 
 
-
         <Button
             android:id="@+id/start"
             android:layout_width="wrap_content"
@@ -24,21 +23,37 @@
             android:layout_marginTop="100dp"
             android:text="start" />
 
+        <Button
+            android:id="@+id/load"
+            android:layout_gravity="right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:text="load" />
 
-        <com.qwuiteam.project.view.RoomPkProgressBar
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="250dp"
-            android:layout_width="match_parent"
-            android:layout_height="15dp"/>
+            android:background="@drawable/icon_big">
+
+            <com.qwuiteam.project.view.RoomPkProgressBarLayout
+                android:id="@+id/layoutProgress"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginHorizontal="34dp"
+                android:layout_marginTop="100dp" />
+
+            <com.qwuiteam.project.view.PKProgressBar
+                android:id="@+id/progressPk"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_gravity="bottom"
+                android:layout_marginHorizontal="34dp"
+                android:layout_marginBottom="50dp" />
 
 
-
-        <com.qwuiteam.project.view.PKProgressBar
-            android:id="@+id/progressPk"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="16dp" />
+        </FrameLayout>
 
 
         <FrameLayout
