--- a/app/src/main/res/layout/fragment_string.xml
+++ b/app/src/main/res/layout/fragment_string.xml
@@ -22,6 +22,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="formatText" />
+    <Button
+        android:id="@+id/formatText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="formatText2" />
 
 
     <TextView
