[feature_1.0.4.0] 1.flow callback
Signed-off-by: liuyuzhe <15313482685@163.com>

--- a/app/src/main/res/layout/fragment_viewmodel.xml
+++ b/app/src/main/res/layout/fragment_viewmodel.xml
@@ -35,14 +35,14 @@
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:hint="请输入内容"
+            android:visibility="gone"
             android:text="@={viewModel.subtitlesLiveData}" />
 
         <EditText
             android:id="@+id/edit2"
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_gravity="bottom"
+            android:layout_gravity="center"
             android:hint="请输入内容" />
 
     </FrameLayout>
