--- a/app/src/main/res/layout/fragment_string.xml
+++ b/app/src/main/res/layout/fragment_string.xml
@@ -32,6 +32,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BigDecimal" />
+    <Button
+        android:id="@+id/json"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="json" />
 
 
     <TextView
