--- a/app/src/main/res/layout/fragment_choose_photo.xml
+++ b/app/src/main/res/layout/fragment_choose_photo.xml
@@ -10,12 +10,32 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="end"/>
+        <ImageView
+            android:id="@+id/imagePath"
+            android:layout_marginTop="120dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="end"/>
+
         <Button
             android:id="@+id/choose"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@mipmap/ic_launcher_round"
             android:text="choose" />
+
+        <Button
+            android:id="@+id/load"
+            android:layout_gravity="center_vertical"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@mipmap/ic_launcher_round"
+            android:text="load" />
 
 
     </FrameLayout>
