--- a/app/src/main/res/layout/fragment_choose_photo.xml
+++ b/app/src/main/res/layout/fragment_choose_photo.xml
@@ -10,11 +10,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/image"
+        <Button
+            android:id="@+id/loadAudio"
+            android:text="loadAudio"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="end"/>
+
         <ImageView
             android:id="@+id/imagePath"
             android:layout_marginTop="120dp"
