--- a/app/src/main/res/layout/dialog_room_red_packet.xml
+++ b/app/src/main/res/layout/dialog_room_red_packet.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="bean"
+            type="com.qwuiteam.project.bean.Person" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -98,7 +100,7 @@
                     android:layout_marginHorizontal="36dp"
                     android:layout_marginBottom="10dp"
                     android:gravity="center"
-                    android:text="@string/send"
+                    android:text="@{bean.s}"
                     android:textColor="@color/white"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toTopOf="@+id/tv_tips" />
