--- a/app/src/main/res/layout/fragment_date.xml
+++ b/app/src/main/res/layout/fragment_date.xml
@@ -36,7 +36,7 @@
         android:id="@+id/format1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="format1" />
+        android:text="json" />
 
 
     <TextView
